# MineTracker

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  config.yaml.example  docker-compose.yml  example.env  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 31c31a8e0f63_initial.py  dd295d9915d1_add_tickets_table.py
docs/: 01-setup.md  02-architecture.md  03-handlers-and-commands.md  04-fsm-and-states.md  05-services-and-background.md  06-i18n-localization.md
mc_ping_bot/: __init__.py  __main__.py  config.py
mc_ping_bot/bot/: commands_setup.py  i18n.py  states.py
mc_ping_bot/bot/handlers/: __init__.py  admin.py  commands.py  configuration.py  errors.py  group.py  help.py  start.py  user.py
mc_ping_bot/bot/keyboards/: __init__.py  callback_data.py  inline.py
mc_ping_bot/bot/middlewares/: album.py  i18n.py  maintenance.py  rate_limit.py
mc_ping_bot/db/: database.py  models.py
mc_ping_bot/locales/: en.json  ru.json
mc_ping_bot/locales/en/: messages.ftl
mc_ping_bot/locales/ru/: messages.ftl
mc_ping_bot/security/: ssrf.py  validators.py
mc_ping_bot/services/: cache.py  i18n.py  maintenance.py  minecraft.py  monitor.py
scripts/: migrate.py  migrate_data.py
