[project]
name = "tg-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "aiosqlite>=0.22.1",
    "mcstatus>=12.1.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "fluent-runtime>=0.4.0",
    "fluent-syntax>=0.19.0",
]
